--- a/docs/_docs/01.2-grasp-anything++.md
+++ b/docs/_docs/01.2-grasp-anything++.md
@@ -1,7 +1,7 @@
 ---
-title: "Introduction"
-permalink: /docs/introduction/
-excerpt: "Large-scale dataset for grasp detection."
+title: "Grasp-Anything++"
+permalink: /docs/grasp-anything-pp/
+excerpt: "Overview of Grasp-Anything++."
 redirect_from:
   - /theme-setup/
 toc: true
