--- a/docs/_docs/01.3-grasp-anything-6d.md
+++ b/docs/_docs/01.3-grasp-anything-6d.md
@@ -1,7 +1,7 @@
 ---
-title: "Introduction"
-permalink: /docs/introduction/
-excerpt: "Large-scale dataset for grasp detection."
+title: "Grasp-Anything-6D"
+permalink: /docs/grasp-anything-6d/
+excerpt: "Overview of Grasp-Anything-6D."
 redirect_from:
   - /theme-setup/
 toc: true
