--- a/docs/_docs/01.2-grasp-anything++.md
+++ b/docs/_docs/01.2-grasp-anything++.md
@@ -9,9 +9,13 @@ toc: true
 
 Grasp-Anything++ revolutionizes grasp detection with a dataset featuring **1 million samples**, **3 million objects**, and over **10 million language-based instructions**. Utilizing foundation models for a vast scene description corpus, our work introduces a language-centric detection method via diffusion models, enhanced by a contrastive training objective.
 
+## Method
+![Methodology](assets/images/grasp-anything-pp-methodology.png "Method")
+
 ## Demonstration
-<video width="100%" controls>
+TBD
+<!-- <video width="100%" controls>
   <source src="https://github.com/airvlab/grasp-anything/assets/140178004/7afc471e-385d-4aff-9940-a87fc3fe034e" type="video/mp4">
   Your browser does not support the video tag.
-</video>
+</video> -->
 
