--- a/docs/_docs/01.2-grasp-anything++.md
+++ b/docs/_docs/01.2-grasp-anything++.md
@@ -10,7 +10,7 @@ toc: true
 Grasp-Anything++ revolutionizes grasp detection with a dataset featuring **1 million samples**, **3 million objects**, and over **10 million language-based instructions**. Utilizing foundation models for a vast scene description corpus, our work introduces a language-centric detection method via diffusion models, enhanced by a contrastive training objective.
 
 ## Method
-![Methodology](/docs/assets/images/grasp-anything-pp-methodology.png "Method")
+<!-- ![Methodology](/docs/assets/images/grasp-anything-pp-methodology.png "Method") -->
 
 ## Demonstration
 TBD
