Add method description

--- a/docs/_docs/01.2-grasp-anything++.md
+++ b/docs/_docs/01.2-grasp-anything++.md
@@ -12,6 +12,11 @@ Grasp-Anything++ revolutionizes grasp detection with a dataset featuring **1 mil
 ## Method
 ![grasp-anything-pp-methodology](https://github.com/airvlab/grasp-anything/assets/140178004/69f59388-6476-4763-a1a2-e6aa00f1692a)
 
+Our network operates under two conditions: an image labeled as *I* and a related text prompt indicated by *e*. Through the ALBEF module [Li et al., 2021], we integrate embeddings from both text and image. The attention mask produced by ALBEF serves as our estimate, and we apply a contrastive loss `L_contrastive` to this mask against the noisy grasp pose `x_T`. We generate the denoised grasp pose by passing ALBEF's features through MLP layers, yielding a diffusion loss `L_diffusion`. The overall training goal combines these losses into `L_total = L_contrastive + L_diffusion`.
+
 
 ## Demonstration
 TBD
+
+## References
+[1] Li, J., Selvaraju, R., Gotmare, A., Joty, S., Xiong, C., & Hoi, S. C. H. (2021). Align before fuse: Vision and language representation learning with momentum distillation. Advances in neural information processing systems, 34, 9694-9705.
