--- a/docs/_docs/01.1-grasp-anything.md
+++ b/docs/_docs/01.1-grasp-anything.md
@@ -15,3 +15,7 @@ Grasp-Anything introduces a new dataset synthesized from foundation models, targ
   Your browser does not support the video tag.
 </video>
 
+## Samples
+Here are some samples from the Grasp-Anything dataset.
+![grasp_visualization](https://github.com/airvlab/grasp-anything/assets/140178004/9b62723c-b468-4103-8dc3-b4c6ed70eec3)
+
