--- a/docs/_docs/01.2-grasp-anything++.md
+++ b/docs/_docs/01.2-grasp-anything++.md
@@ -18,5 +18,10 @@ Our network operates under two conditions: an image labeled as *I* and a related
 ## Demonstration
 TBD
 
+## Samples
+Here are some samples from the Grasp-Anything++ dataset. Above are the corresponding grasp instructions.
+![cvpr_demo](https://github.com/airvlab/grasp-anything/assets/140178004/93c26f68-f445-43d6-8bfc-3139bf6fae7e)
+
+
 ## References
 [1] Li, J., Selvaraju, R., Gotmare, A., Joty, S., Xiong, C., & Hoi, S. C. H. (2021). Align before fuse: Vision and language representation learning with momentum distillation. Advances in neural information processing systems, 34, 9694-9705.
