--- a/docs/_docs/01.1-grasp-anything.md
+++ b/docs/_docs/01.1-grasp-anything.md
@@ -17,5 +17,5 @@ Grasp-Anything introduces a new dataset synthesized from foundation models, targ
 
 ## Samples
 Here are some samples from the Grasp-Anything dataset.
-![grasp_visualization](https://github.com/airvlab/grasp-anything/assets/140178004/9b62723c-b468-4103-8dc3-b4c6ed70eec3)
+![grasp_visualization-Page-1](https://github.com/airvlab/grasp-anything/assets/140178004/e40063c4-623e-4663-a7e7-f4c00c5fe0d2)
 
