--- a/docs/_docs/01.2-grasp-anything++.md
+++ b/docs/_docs/01.2-grasp-anything++.md
@@ -16,7 +16,10 @@ Our network operates under two conditions: an image labeled as *I* and a related
 
 
 ## Demonstration
-TBD
+<video width="100%" controls>
+  <source src="https://github.com/airvlab/grasp-anything/assets/140178004/64052989-8a1e-4140-9051-a2399cfe241b" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
 
 ## Samples
 Here are some samples from the Grasp-Anything++ dataset. Above are the corresponding grasp instructions.
