--- a/docs/_docs/01.1-grasp-anything.md
+++ b/docs/_docs/01.1-grasp-anything.md
@@ -15,7 +15,7 @@ Grasp-Anything introduces a new dataset synthesized from foundation models, targ
 </p>
 
 
-Our data pipeline kicks off by tasking ChatGPT with generating an expansive array of scene descriptions in a specific format, aiming for a diverse set of scenarios that include a broad spectrum of objects. Next, we transform these scene descriptions into images using Stable-Diffusion 2.1 [1], and then, with a pretrained RAGT-3/3 model [2], we create plausible grasp poses. These poses are assessed for their viability based on established theories, making our dataset not only vast but of high quality.
+Our data pipeline begins with prompting ChatGPT with generating an expansive array of scene descriptions in a specific format, aiming for a diverse set of scenarios that include a broad spectrum of objects. Next, we transform these scene descriptions into images using Stable-Diffusion 2.1 [1], and then, with a pretrained RAGT-3/3 model [2], we create plausible grasp poses. These poses are assessed for their viability based on established theories, making our dataset not only vast but of high quality.
 
 ## Demonstration
 <video width="100%" controls>
