--- a/docs/_docs/01.1-grasp-anything.md
+++ b/docs/_docs/01.1-grasp-anything.md
@@ -11,7 +11,7 @@ Grasp-Anything introduces a new dataset synthesized from foundation models, targ
 
 ## Data Pipeline
 <p align="center">
-  <img src="../assets/images/generation_pipeline.png" alt="data_pipeline" style="width: 100%;" />
+  <img src="../../assets/images/generation_pipeline.png" alt="data_pipeline" style="width: 100%;" />
 </p>
 
 
@@ -19,14 +19,14 @@ Our data pipeline begins with prompting ChatGPT with generating an expansive arr
 
 ## Demonstration
 <video width="100%" controls>
-  <source src="../assets/images/ICRA24_0520_VI_fi_compressed.mp4" type="video/mp4">
+  <source src="../../assets/images/ICRA24_0520_VI_fi_compressed.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
 
 ## Samples
 Here are some samples from the Grasp-Anything dataset.
 <p align="center">
-  <img src="../assets/images/grasp-anything-samples.png" alt="grasp-anything-sample" style="width: 100%;" />
+  <img src="../../assets/images/grasp-anything-samples.png" alt="grasp-anything-sample" style="width: 100%;" />
 </p>
 
 ## References
