--- a/docs/_docs/01.2-grasp-anything++.md
+++ b/docs/_docs/01.2-grasp-anything++.md
@@ -11,7 +11,7 @@ Grasp-Anything++ revolutionizes grasp detection with a dataset featuring **1 mil
 
 ## Method
 <p align="center">
-  <img src="../assets/images/grasp-anything-pp-methodology.png" alt="method" style="width: 100%;" />
+  <img src="../../assets/images/grasp-anything-pp-methodology.png" alt="method" style="width: 100%;" />
 </p>
 
 Our network operates under two conditions: an image labeled as *I* and a related text prompt indicated by *e*. Through the ALBEF module [Li et al., 2021], we integrate embeddings from both text and image. The attention mask produced by ALBEF serves as our estimate, and we apply a contrastive loss `L_contrastive` to this mask against the noisy grasp pose `x_T`. We generate the denoised grasp pose by passing ALBEF's features through MLP layers, yielding a diffusion loss `L_diffusion`. The overall training goal combines these losses into `L_total = L_contrastive + L_diffusion`.
@@ -19,7 +19,7 @@ Our network operates under two conditions: an image labeled as *I* and a related
 
 ## Demonstration
 <video width="100%" controls>
-  <source src="../assets/images/CVPR24_demo.mp4" type="video/mp4">
+  <source src="../../assets/images/CVPR24_demo.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
 
@@ -27,7 +27,7 @@ Our network operates under two conditions: an image labeled as *I* and a related
 Here are some samples from the Grasp-Anything++ dataset. Above are the corresponding grasp instructions.
 
 <p align="center">
-  <img src="../assets/images/grasp-anything-pp-samples.png" alt="samples" style="width: 100%;" />
+  <img src="../../assets/images/grasp-anything-pp-samples.png" alt="samples" style="width: 100%;" />
 </p>
 
 
