--- a/docs/_docs/01.1-grasp-anything.md
+++ b/docs/_docs/01.1-grasp-anything.md
@@ -7,7 +7,7 @@ redirect_from:
 toc: true
 ---
 
-Grasp-Anything introduces a new dataset synthesized from foundation models, targeting the challenge of grasp detection in robotics. With **1 million** samples and **3 million** diverse objects, it significantly surpasses previous datasets in *diversity*, facilitating advanced zero-shot and language-driven grasp detection in both simulated and real-world settings.
+Grasp-Anything dataset is synthesized from foundation models. With **1 million** samples and **3 million** diverse objects, it significantly surpasses previous datasets in *diversity*, facilitating advanced zero-shot in both simulated and real-world settings.
 
 ## Data Pipeline
 <p align="center">
@@ -15,7 +15,7 @@ Grasp-Anything introduces a new dataset synthesized from foundation models, targ
 </p>
 
 
-Our data pipeline begins with prompting ChatGPT with generating an expansive array of scene descriptions in a specific format, aiming for a diverse set of scenarios that include a broad spectrum of objects. Next, we transform these scene descriptions into images using Stable-Diffusion 2.1 [1], and then, with a pretrained RAGT-3/3 model [2], we create plausible grasp poses. These poses are assessed for their viability based on established theories, making our dataset not only vast but of high quality.
+We use ChatGPT to generate an expansive array of scene descriptions. Next, we transform these scene descriptions into images using Stable-Diffusion 2.1 [1], and label them with a pretrained RAGT-3/3 model [2]. These grasping poses are post-proceeded to ensure high quality.
 
 ## Demonstration
 <video width="100%" controls>
@@ -24,7 +24,6 @@ Our data pipeline begins with prompting ChatGPT with generating an expansive arr
 </video>
 
 ## Samples
-Here are some samples from the Grasp-Anything dataset.
 <p align="center">
   <img src="../../assets/images/grasp-anything-samples.png" alt="grasp-anything-sample" style="width: 100%;" />
 </p>
