--- a/docs/_docs/01.1-grasp-anything.md
+++ b/docs/_docs/01.1-grasp-anything.md
@@ -29,7 +29,7 @@ We use ChatGPT to generate an expansive array of scene descriptions. Next, we tr
 </p>
 
 ## References
-[1] Rombach, R., Blattmann, A., Lorenz, D., Esser, P., & Ommer, B. (2022). High-resolution image synthesis with latent diffusion models. In Proceedings of the IEEE/CVF conference on computer vision and pattern recognition (pp. 10684-10695).
+[1] Rombach, R., Blattmann, A., Lorenz, D., Esser, P., & Ommer, B. High-resolution image synthesis with latent diffusion models. In CVPR, 2020.
 
-[2] Cao, B., Zhou, X., Guo, C., Zhang, B., Liu, Y., & Tan, Q. (2023). NBMOD: Find It and Grasp It in Noisy Background. arXiv preprint arXiv:2306.10265.
+[2] Cao, B., Zhou, X., Guo, C., Zhang, B., Liu, Y., & Tan, Q. NBMOD: Find It and Grasp It in Noisy Background. arXiv preprint arXiv:2306.10265, 2023.
 
