--- a/docs/_docs/01.1-grasp-anything.md
+++ b/docs/_docs/01.1-grasp-anything.md
@@ -7,7 +7,7 @@ redirect_from:
 toc: true
 ---
 
-Grasp-Anything dataset is synthesized from foundation models. With **1 million** samples and **3 million** diverse objects, it significantly surpasses previous datasets in *diversity*, facilitating advanced zero-shot in both simulated and real-world settings.
+Grasp-Anything dataset is synthesized from foundation models. With **1 million** samples and **3 million** diverse objects, it significantly surpasses previous datasets, facilitating zero-shot learning in both simulated and real-world settings.
 
 ## Data Pipeline
 <p align="center">
