--- a/docs/_docs/01.2-grasp-anything++.md
+++ b/docs/_docs/01.2-grasp-anything++.md
@@ -13,8 +13,7 @@ Grasp-Anything++ extend Grasp-Anything and introduces over **10 million** langua
 <p align="center">
   <img src="../../assets/images/grasp-anything-pp-methodology.png" alt="method" style="width: 100%;" />
 </p>
-
-We introduce a new language-driven grasping method based on diffusion models, enhanced by a our new contrastive training objective.
+We introduce a new language-driven grasping method based on diffusion models with a new contrastive training objective.
 
 ## Demonstration
 <video width="100%" controls>
