--- a/docs/_docs/01.2-grasp-anything++.md
+++ b/docs/_docs/01.2-grasp-anything++.md
@@ -7,7 +7,7 @@ redirect_from:
 toc: true
 ---
 
-Grasp-Anything++ extend Grasp-Anything and introduces over **10 million** language-based grasping instructions. Our dataset enables **language-driven grasping" task and allows the robots to grasp specific objects based on language command.
+Grasp-Anything++ extend Grasp-Anything and introduces over **10 million** language-based grasping instructions. Our dataset enables **language-driven grasping** task and allows the robots to grasp specific objects based on language command.
 
 ## Method
 <p align="center">
