--- a/docs/_docs/01.2-grasp-anything++.md
+++ b/docs/_docs/01.2-grasp-anything++.md
@@ -9,7 +9,12 @@ toc: true
 
 Grasp-Anything++ extend Grasp-Anything and introduces over **10 million** language-based grasping instructions. Our dataset enables **language-driven grasping** task and allows the robots to grasp specific objects based on language command.
 
-## Method
+## Samples
+<p align="center">
+  <img src="../../assets/images/grasp-anything-pp-samples.png" alt="samples" style="width: 100%;" />
+</p>
+
+## Language-driven Grasping
 <p align="center">
   <img src="../../assets/images/grasp-anything-pp-methodology.png" alt="method" style="width: 100%;" />
 </p>
@@ -20,12 +25,6 @@ We introduce a new language-driven grasping method based on diffusion models wit
   <source src="../../assets/images/CVPR24_demo.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
-
-## Samples
-<p align="center">
-  <img src="../../assets/images/grasp-anything-pp-samples.png" alt="samples" style="width: 100%;" />
-</p>
-
 
 ## References
 [//]: # [1] Li, J., Selvaraju, R., Gotmare, A., Joty, S., Xiong, C., & Hoi, S. C. H. Align before fuse: Vision and language representation learning with momentum distillation. Advances in neural information processing systems, 34, 9694-9705.
