--- a/docs/_docs/01.2-grasp-anything++.md
+++ b/docs/_docs/01.2-grasp-anything++.md
@@ -7,7 +7,9 @@ redirect_from:
 toc: true
 ---
 
-Grasp-Anything++ extend Grasp-Anything and introduces over **10 million** language-based grasping instructions. Our dataset enables **language-driven grasping** task and allows the robots to grasp specific objects based on language command.
+Grasp-Anything++ extend over Grasp-Anything and includes **10 million** natural language grasping instructions and associated ground truth. 
+
+Our dataset can be used for **language-driven grasping** task and allows the robots to grasp specific objects based on language commands.
 
 ## Samples
 <p align="center">
