--- a/docs/_docs/01.2-grasp-anything++.md
+++ b/docs/_docs/01.2-grasp-anything++.md
@@ -7,7 +7,7 @@ redirect_from:
 toc: true
 ---
 
-Grasp-Anything++ extend over Grasp-Anything and includes **10 million** language grasping instructions and associated ground truth. 
+Grasp-Anything++ extend over Grasp-Anything and includes **10 million** grasping instructions and associated ground truth. 
 
 Our dataset can be used for **language-driven grasping** task and allows the robots to grasp specific objects based on language commands.
 
