--- a/docs/_docs/01.2-grasp-anything++.md
+++ b/docs/_docs/01.2-grasp-anything++.md
@@ -23,10 +23,10 @@ Our dataset can be used for **language-driven grasping** task and allows the rob
 We introduce a new language-driven grasping method based on diffusion models with a new contrastive training objective.
 
 ## Demonstration
-<video width="100%" controls>
+<!--video width="100%" controls>
   <source src="../../assets/images/CVPR24_demo.mp4" type="video/mp4">
   Your browser does not support the video tag.
-</video>
+</video-->
 
 ## References
 [//]: # [1] Li, J., Selvaraju, R., Gotmare, A., Joty, S., Xiong, C., & Hoi, S. C. H. Align before fuse: Vision and language representation learning with momentum distillation. Advances in neural information processing systems, 34, 9694-9705.
