--- a/docs/_docs/01.2-grasp-anything++.md
+++ b/docs/_docs/01.2-grasp-anything++.md
@@ -22,7 +22,7 @@ Our dataset can be used for **language-driven grasping** task and allows the rob
 </p>
 We introduce a new language-driven grasping method based on diffusion models with a new contrastive training objective.
 
-## Demonstration
+[//]: # ## Demonstration
 <!--video width="100%" controls>
   <source src="../../assets/images/CVPR24_demo.mp4" type="video/mp4">
   Your browser does not support the video tag.
