--- a/docs/_docs/01.1-grasp-anything.md
+++ b/docs/_docs/01.1-grasp-anything.md
@@ -15,7 +15,7 @@ Grasp-Anything dataset is synthesized from foundation models. With **1 million**
 </p>
 
 
-We use ChatGPT to generate an expansive array of scene descriptions. Next, we transform these scene descriptions into images using Stable-Diffusion 2.1 [1], and label them with a pretrained RAGT-3/3 model [2]. These grasping poses are post-proceeded to ensure high quality.
+We use ChatGPT to generate an expansive array of scene descriptions. Next, we transform these scene descriptions into images using Stable-Diffusion 2.1 [[1]](#references), and label them with a pretrained RAGT-3/3 model. These grasping poses are post-proceeded to ensure high quality.
 
 ## Demonstration
 <video width="100%" controls>
@@ -29,7 +29,5 @@ We use ChatGPT to generate an expansive array of scene descriptions. Next, we tr
 </p>
 
 ## References
-[1] Rombach, R., Blattmann, A., Lorenz, D., Esser, P., & Ommer, B. High-resolution image synthesis with latent diffusion models. In CVPR, 2020.
-
-[2] Cao, B., Zhou, X., Guo, C., Zhang, B., Liu, Y., & Tan, Q. NBMOD: Find It and Grasp It in Noisy Background. arXiv preprint arXiv:2306.10265, 2023.
-
+<a name="references"></a>
+- [1] Rombach, R., Blattmann, A., Lorenz, D., Esser, P., & Ommer, B. High-resolution image synthesis with latent diffusion models. In CVPR, 2020.
