--- a/docs/_docs/01.2-grasp-anything++.md
+++ b/docs/_docs/01.2-grasp-anything++.md
@@ -20,7 +20,9 @@ Our dataset can be used for **language-driven grasping** task and allows the rob
 <p align="center">
   <img src="../../assets/images/grasp-anything-pp-methodology.png" alt="method" style="width: 100%;" />
 </p>
-We introduce a new language-driven grasping method based on diffusion models with a new contrastive training objective.
+
+We introduce a new language-driven grasping method based on conditional-guided diffusion models [[1]](#references) with a new contrastive training objective.
 
 ## References
-[//]: # [1] Li, J., Selvaraju, R., Gotmare, A., Joty, S., Xiong, C., & Hoi, S. C. H. Align before fuse: Vision and language representation learning with momentum distillation. Advances in neural information processing systems, 34, 9694-9705.
+<a name="references"></a>
+- [1] Vuong, A. D., Vu, M. N., Nguyen, T., Huang, B., Nguyen, D., Vo, T., & Nguyen, A. Language-driven Scene Synthesis using Multi-conditional Diffusion Model. In NeurIPS, 2023.
