Change number of samples figure

--- a/docs/_docs/01.2-grasp-anything++.md
+++ b/docs/_docs/01.2-grasp-anything++.md
@@ -7,7 +7,7 @@ redirect_from:
 toc: true
 ---
 
-Grasp-Anything++ extend over Grasp-Anything and includes **10 million** grasping instructions and associated ground truth. 
+Grasp-Anything++ [[1]](#references) extend over Grasp-Anything and includes **10 million** grasping instructions and associated ground truth. 
 
 Our dataset can be used for **language-driven grasping** task and allows the robots to grasp specific objects based on language commands.
 
@@ -21,8 +21,11 @@ Our dataset can be used for **language-driven grasping** task and allows the rob
   <img src="../../assets/images/grasp-anything-pp-methodology.png" alt="method" style="width: 100%;" />
 </p>
 
-We introduce a new language-driven grasping method based on conditional-guided diffusion models [[1]](#references) with a new contrastive training objective.
+We introduce a new language-driven grasping method based on conditional-guided diffusion models [[2]](#references) with a new contrastive training objective.
 
 ## References
 <a name="references"></a>
-- [1] Vuong, A. D., Vu, M. N., Nguyen, T., Huang, B., Nguyen, D., Vo, T., & Nguyen, A. Language-driven Scene Synthesis using Multi-conditional Diffusion Model. In NeurIPS, 2023.
+
+- [1] Vuong, A. D., Vu, M. N., Huang, B., N. Nguyen, H. Le, Vo, T., & Nguyen, A. Language-driven Scene Synthesis using Multi-conditional Diffusion Model. In CVPR, 2024.
+
+- [2] Vuong, A. D., Vu, M. N., Nguyen, T., Huang, B., Nguyen, D., Vo, T., & Nguyen, A. Language-driven Scene Synthesis using Multi-conditional Diffusion Model. In NeurIPS, 2023.
