--- a/docs/_docs/01.1-grasp-anything.md
+++ b/docs/_docs/01.1-grasp-anything.md
@@ -7,7 +7,7 @@ redirect_from:
 toc: true
 ---
 
-Grasp-Anything dataset is synthesized from foundation models. With **1 million** samples and **3 million** diverse objects, it significantly surpasses previous datasets, facilitating zero-shot learning in both simulated and real-world settings.
+Grasp-Anything [[1]](#references) dataset is synthesized from foundation models. With **1 million** samples and **3 million** diverse objects, it significantly surpasses previous datasets, facilitating zero-shot learning in both simulated and real-world settings.
 
 ## Data Pipeline
 <p align="center">
@@ -15,7 +15,7 @@ Grasp-Anything dataset is synthesized from foundation models. With **1 million**
 </p>
 
 
-We use ChatGPT to generate an expansive array of scene descriptions. Next, we transform these scene descriptions into images using Stable-Diffusion 2.1 [[1]](#references), and label them with a pretrained RAGT-3/3 model. These grasping poses are post-proceeded to ensure high quality.
+We use ChatGPT to generate an expansive array of scene descriptions. Next, we transform these scene descriptions into images using Stable-Diffusion 2.1 [[2]](#references), and label them with a pretrained RAGT-3/3 model. These grasping poses are post-proceeded to ensure high quality.
 
 ## Demonstration
 <video width="100%" controls>
@@ -30,4 +30,7 @@ We use ChatGPT to generate an expansive array of scene descriptions. Next, we tr
 
 ## References
 <a name="references"></a>
-- [1] Rombach, R., Blattmann, A., Lorenz, D., Esser, P., & Ommer, B. High-resolution image synthesis with latent diffusion models. In CVPR, 2020.
+
+- [1] Vuong, A. D., Vu, M. N., Le, H., Huang, B., Huynh, B., Vo, T., ... & Nguyen, A. Grasp-anything: Large-scale grasp dataset from foundation models. In ICRA, 2024.
+
+- [2] Rombach, R., Blattmann, A., Lorenz, D., Esser, P., & Ommer, B. High-resolution image synthesis with latent diffusion models. In CVPR, 2020.
