--- a/docs/_docs/01.1-grasp-anything.md
+++ b/docs/_docs/01.1-grasp-anything.md
@@ -15,7 +15,7 @@ Grasp-Anything [[1]](#references) dataset is synthesized from foundation models.
 </p>
 
 
-We use ChatGPT to generate an expansive array of scene descriptions. Next, we transform these scene descriptions into images using Stable-Diffusion 2.1 [[2]](#references), and label them with a pretrained RAGT-3/3 model. These grasping poses are post-proceeded to ensure high quality.
+We use ChatGPT to generate an expansive array of scene descriptions. Next, we transform these scene descriptions into images using Stable-Diffusion [[2]](#references), and label them with a pretrained RAGT-3/3 model. These grasping poses are post-proceeded to ensure high quality.
 
 ## Demonstration
 <video width="100%" controls>
@@ -31,6 +31,6 @@ We use ChatGPT to generate an expansive array of scene descriptions. Next, we tr
 ## References
 <a name="references"></a>
 
-- [1] Vuong, A. D., Vu, M. N., Le, H., Huang, B., Huynh, B., Vo, T., ... & Nguyen, A. Grasp-anything: Large-scale grasp dataset from foundation models. In ICRA, 2024.
+- [1] An Dinh Vuong, Minh Nhat Vu, Hieu Le, Baoru Huang, Binh Huynh, Thieu Vo, Andreas Kugi, Anh Nguyen. Grasp-anything: Large-scale grasp dataset from foundation models. In ICRA, 2024.
 
-- [2] Rombach, R., Blattmann, A., Lorenz, D., Esser, P., & Ommer, B. High-resolution image synthesis with latent diffusion models. In CVPR, 2020.
+- [2] Robin Rombach, Andreas Blattmann, Dominik Lorenz, Patrick Esser, and Björn Omme. High-resolution image synthesis with latent diffusion models. In CVPR, 2020.
