--- a/docs/_docs/01.2-grasp-anything++.md
+++ b/docs/_docs/01.2-grasp-anything++.md
@@ -26,6 +26,6 @@ We introduce a new language-driven grasping method based on conditional-guided d
 ## References
 <a name="references"></a>
 
-- [1] Vuong, A. D., Vu, M. N., Huang, B., N. Nguyen, H. Le, Vo, T., & Nguyen, A. Language-driven Scene Synthesis using Multi-conditional Diffusion Model. In CVPR, 2024.
+- [1] An Dinh Vuong, Minh Vu, Baoru Huang, Nghia Nguyen, Hieu Le, Thieu Vo, Anh Nguyen. Language-driven Scene Synthesis using Multi-conditional Diffusion Model. In CVPR, 2024.
 
-- [2] Vuong, A. D., Vu, M. N., Nguyen, T., Huang, B., Nguyen, D., Vo, T., & Nguyen, A. Language-driven Scene Synthesis using Multi-conditional Diffusion Model. In NeurIPS, 2023.
+- [2] An Dinh Vuong, Minh Nhat Vu, Toan Tien Nguyen, Baoru Huang, Dzung Nguyen, Thieu Vo, Anh Nguyen. Language-driven Scene Synthesis using Multi-conditional Diffusion Model. In NeurIPS, 2023.
