--- a/docs/_docs/01.1-grasp-anything.md
+++ b/docs/_docs/01.1-grasp-anything.md
@@ -31,6 +31,6 @@ We use ChatGPT to generate an expansive array of scene descriptions. Next, we tr
 ## References
 <a name="references"></a>
 
-- [1] [An Dinh Vuong](https://andvg3.github.io/), Minh Nhat Vu, Hieu Le, Baoru Huang, Binh Huynh, Thieu Vo, Andreas Kugi, [Anh Nguyen](https://www.csc.liv.ac.uk/~anguyen/). Grasp-anything: Large-scale grasp dataset from foundation models. In ICRA, 2024.
+- [1] [An Dinh Vuong](https://andvg3.github.io/), Minh Nhat Vu, Hieu Le, Baoru Huang, Binh Huynh, Thieu Vo, Andreas Kugi, [Anh Nguyen](https://www.csc.liv.ac.uk/~anguyen/). *Grasp-anything: Large-scale grasp dataset from foundation models*. In ICRA, 2024.
 
-- [2] Robin Rombach, Andreas Blattmann, Dominik Lorenz, Patrick Esser, and Björn Omme. High-resolution image synthesis with latent diffusion models. In CVPR, 2020.
+- [2] Robin Rombach, Andreas Blattmann, Dominik Lorenz, Patrick Esser, and Björn Omme. *High-resolution image synthesis with latent diffusion models*. In CVPR, 2020.
