udpate paper list

--- a/docs/_docs/01.2-grasp-anything++.md
+++ b/docs/_docs/01.2-grasp-anything++.md
@@ -26,6 +26,6 @@ We introduce a new language-driven grasping method based on conditional-guided d
 ## References
 <a name="references"></a>
 
-- [1] [An Dinh Vuong](https://andvg3.github.io/), Minh Vu, Baoru Huang, Nghia Nguyen, Hieu Le, Thieu Vo, [Anh Nguyen](https://www.csc.liv.ac.uk/~anguyen/). *Language-driven Grasp Detection*. In CVPR, 2024.
+- [1] [An Dinh Vuong](https://andvg3.github.io/), Minh Nhat Vu, Baoru Huang, Nghia Nguyen, Hieu Le, Thieu Vo, [Anh Nguyen](https://www.csc.liv.ac.uk/~anguyen/). *Language-driven Grasp Detection*. In CVPR, 2024.
 
 - [2] [An Dinh Vuong](https://andvg3.github.io/), Minh Nhat Vu, Toan Tien Nguyen, Baoru Huang, Dzung Nguyen, Thieu Vo, [Anh Nguyen](https://www.csc.liv.ac.uk/~anguyen/). *Language-driven Scene Synthesis using Multi-conditional Diffusion Model*. In NeurIPS, 2023.
