update ECCV paper name

--- a/docs/_docs/01.3-grasp-anything-6d.md
+++ b/docs/_docs/01.3-grasp-anything-6d.md
@@ -27,4 +27,4 @@ We introduce a new language-driven 6-DoF grasping method with a new concept of n
 
 - [1] [An Dinh Vuong](https://andvg3.github.io/), Minh Nhat Vu, Hieu Le, Baoru Huang, Binh Huynh, Thieu Vo, Andreas Kugi, [Anh Nguyen](https://www.csc.liv.ac.uk/~anguyen/). *Grasp-anything: Large-scale grasp dataset from foundation models*. In ICRA, 2024.
 
-- [2] [Toan Nguyen](https://scholar.google.com/citations?user=PhqGEY8AAAAJ&hl=en), Minh Nhat Vu, Baoru Huang, [An Dinh Vuong](https://andvg3.github.io/), Quan Vuong, Ngan Le, Thieu Vo, [Anh Nguyen](https://www.csc.liv.ac.uk/~anguyen/). *Language-driven Scene Synthesis using Multi-conditional Diffusion Model*. In ECCV, 2024.
+- [2] [Toan Nguyen](https://scholar.google.com/citations?user=PhqGEY8AAAAJ&hl=en), Minh Nhat Vu, Baoru Huang, [An Dinh Vuong](https://andvg3.github.io/), Quan Vuong, Ngan Le, Thieu Vo, [Anh Nguyen](https://www.csc.liv.ac.uk/~anguyen/). *Language-Driven 6-DoF Grasp Detection Using Negative Prompt Guidance*. In ECCV, 2024.
