--- a/docs/_docs/01.3-grasp-anything-6d.md
+++ b/docs/_docs/01.3-grasp-anything-6d.md
@@ -15,12 +15,26 @@ Built upon Grasp-Anything [[1]](#references), Grasp-Anything-6D [[2]](#reference
   <img src="../../assets/images/grasp-anything-6d-samples.png" alt="samples" style="width: 100%;" />
 </p>
 
-## Language-driven Grasping
+## Language-driven 6-DoF Grasping
 <p align="center">
   <img src="../../assets/images/grasp-anything-6d-methodology.png" alt="method" style="width: 100%;" />
 </p>
 
 We introduce a new language-driven 6-DoF grasping method with a new concept of negative prompt guidance.
+
+<p align="center">
+  <img src="../../assets/images/grasp-anything-6d-qual.png" alt="qual" style="width: 100%;" />
+</p>
+
+Our method enables instruction-following grasping in complex 3D environments.
+
+## Robotic Applications
+
+<p align="center">
+  <img src="../../assets/images/grasp-anything-6d-robot.png" alt="robot" style="width: 100%;" />
+</p>
+
+Our method powers real robotic manipulation capability.
 
 ## References
 <a name="references"></a>
